[skip ci] fixed tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,9 @@
         "typeRoots": [
             "typings/global"
         ]
-    }
+    },
+    "include": [
+        "kendo-multi-calendar.ts",
+        "typings/**/*.ts"
+    ]
 }
