safari test fixes

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:local": "npm run build:tests && intern-runner config=build/tests/intern",
     "test:ci:minimal": "npm run build:tests && intern-runner config=build/tests/intern-ci-minimal",
     "test:ci:normal": "npm run build:tests && intern-runner config=build/tests/intern-ci",
+    "test:local:safari": "safaridriver --port=4444",
     "build:tests": "tsc -p tests && cp tests/index.html build/tests/index.html",
     "lint": "tslint kendo-multi-calendar.ts tests/**/*.ts",
     "coverage": "remap-istanbul -i coverage/coverage-final.json -t text-lcov | coveralls"
