--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "kendo-multi-calendar.js",
   "scripts": {
     "postinstall": "typings i",
-    "preversion": "npm run build && npm test",
+    "preversion": "npm run clean && npm run reinstall && npm run build && npm test",
     "postversion": "git add -A . && git push && git push --tags",
     "build": "tsc && uglifyjs -c -m -o ./dist/kendo-multi-calendar.min.js ./dist/kendo-multi-calendar.js",
+    "reinstall": "rm -rf node_modules typings && npm i",
+    "clean": "rm -rf dist build coverage",
     "test": "npm run lint && npm run test:local",
     "test:local": "npm run build:tests && intern-runner config=build/tests/intern",
     "test:ci:minimal": "npm run build:tests && intern-runner config=build/tests/intern-ci-minimal",
