--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "kendo-multi-calendar",
   "version": "2.0.10",
   "description": "Kendo UI calendar with multiple date selection.",
-  "main": "kendo-multi-calendar.js",
+  "main": "dist/kendo-multi-calendar.js",
+  "types": "dist/kendo-multi-calendar.d.ts",
   "scripts": {
     "postinstall": "typings i",
     "preversion": "npm run clean && npm run reinstall && npm run build && npm test",
     "postversion": "git add -A . && git push && git push --tags",
-    "build": "tsc && uglifyjs -c -m -o ./dist/kendo-multi-calendar.min.js ./dist/kendo-multi-calendar.js",
+    "build": "tsc && npm run build:minify && npm run build:headers",
+    "build:minify": "uglifyjs -c -m -o ./dist/kendo-multi-calendar.min.js ./dist/kendo-multi-calendar.js",
+    "build:headers": "echo \"export = kendoExt;\nexport as namespace kendoExt;\n\n$(cat ./dist/kendo-multi-calendar.d.ts)\" > ./dist/kendo-multi-calendar.d.ts",
     "reinstall": "rm -rf node_modules typings && npm i",
     "clean": "rm -rf dist build coverage",
     "test": "npm run lint && npm run test:local",
