--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test:local": "npm run build:tests && intern-runner config=build/tests/intern",
     "test:ci:minimal": "npm run build:tests && intern-runner config=build/tests/intern-ci-minimal",
     "test:ci:normal": "npm run build:tests && intern-runner config=build/tests/intern-ci",
-    "build:tests": "tsc -p tests && cp tests/index.html build/tests/index.html",
-    "lint": "tslint kendo-multi-calendar.ts tests/**/*.ts",
+    "build:tests": "tsc -p tests && shx cp tests/index.html build/tests/index.html",
+    "lint": "tslint kendo-multi-calendar.ts tests/**/{*.ts,*.d.ts}",
     "coverage": "remap-istanbul -i coverage/coverage-final.json -t text-lcov | coveralls"
   },
   "files": [
@@ -44,6 +44,7 @@
     "coveralls": "^2.11.15",
     "intern": "^3.4.2",
     "remap-istanbul": "^0.8.4",
+    "shx": "^0.2.1",
     "tslint": "^4.1.0",
     "tslint-config-standard": "^2.0.0",
     "typescript": "^2.1.4",
