--- a/.travis.yml
+++ b/.travis.yml
@@ -45,12 +45,11 @@ deploy:
       tags: true
       condition: $TEST == 'minimal'
 
-
 before_script:
   npm run build
 
 script:
-  - if [[ $TEST == 'minimal' ]]; then npm run test:ci:minimal; fi
+  - if [[ $TEST == 'minimal' ]]; then npm run lint && npm run test:ci:minimal; fi
   - if [[ $TEST == 'normal' ]]; then npm run test:ci:normal; fi
 after_script:
   if [[ $TEST == 'minimal' ]]; then npm run coverage; fi
