--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,19 @@ matrix:
     - env: TEST='normal'
 
 addons:
-  sauce_connect: true
+  sauce_connect:
+    username: 'iyegoroff-5'
+    no_ssl_bump_domains: all
+  jwt:
+    secure: >
+      UukZRNFKzNbfm0gKBXp3lmr9H/B+lOPQ0hwwe8h5hiSy+qZJZJ+taAIDDmAujF+OwsLQg+otQojeIdUq0lXyXwAjEqoJmt9KHRw66hTSon6gE/sur
+      uY5whvb+DuCvq95w17AuSeZYwUZ6bjl+JQE1xWd4QuaCAviZv/Ddv5rpBmmO6eax4wDZPKs6MTCHTu1KWZNNh/R75eUH5IdqjJVnR2fpI/5F2F/Is
+      +e84eSV1auIjbRJo6LkpeSOKrqFBHVUBFinf45M8bp33GmGlduKRaGbtkdyNF7d3ScrYz+w6FOFrn0nzYpraNhUNgPmthj0p6TZxpYUlezg7T7QV5
+      Y0r5KZUYx5mPrxwsVBZTktLFJB9vs+SpBZ2f0jRfZTlHtSZHGbBhBSXIJo+kwomst4qoGD7p5WGdPi43DmEpGLc5KCPmFHmxvSjrrUYXL2WqVOdwD
+      mLEDRab/qDTSFYj+ABzwlrf/OoAbbEQ2jJUnd5h+PtaYszWAb5GVG3MG1VcqylPm4Jt+BHeAKffmCDfGwN72ixKM32aRLJUpHdljBBUkp/nKz6KxE
+      AenW/ALZG195vTgHKDy6YayDAhEhT3j8uS5lceyXASvs5lpM36/9fFFljnF6c3P3KFlY/AZAGgIiUrzkm2R1SsT7R59uh7J44ElTw3mUSp7tJCuI9
+      e9iB4=
+
 
 branches:
   only:
