--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/kendo-ui": "^2017.1.7",
     "break-cache": "^1.0.3",
     "coveralls": "^2.13.1",
+    "findup-sync": "^1.0.0",
     "intern": "^3.4.5",
     "remap-istanbul": "^0.9.5",
     "shx": "^0.2.1",
