--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 		"reinstall": "npm run clean && rm -rf node_modules && npm i",
 		"clean": "rm -rf dist build coverage",
 		"test": "npm run test:local",
-		"test:local": "npm run build:tests && intern-runner config=build/tests/intern",
-		"test:ci:minimal": "npm run build:tests && intern-runner config=build/tests/intern-ci-minimal",
-		"test:ci:normal": "npm run build:tests && intern-runner config=build/tests/intern-ci",
+		"test:local": "npm run build:tests && intern",
+		"test:ci:minimal": "npm run build:tests && intern config=@ci-minimal",
+		"test:ci:normal": "npm run build:tests && intern config=@ci",
 		"build:tests": "tsc -p tests && shx cp tests/index.html build/tests/index.html",
 		"lint": "tslint -p . kendo-multi-calendar.ts && tslint -p tests/tsconfig.json tests/**/{*.ts,*.d.ts}",
 		"coverage": "remap-istanbul -i coverage/coverage-final.json -t text-lcov | coveralls",
@@ -45,12 +45,12 @@
 		"@types/kendo-ui": "^2018.1.1",
 		"break-cache": "^1.0.3",
 		"coveralls": "^3.0.0",
-		"intern": "^3.4.6",
+		"intern": "^4.1.5",
 		"remap-istanbul": "^0.10.1",
 		"shx": "^0.2.2",
 		"tslint": "^5.9.1",
 		"tslint-config-standard": "^7.0.0",
-		"typescript": "^2.7.2",
+		"typescript": "2.6.2",
 		"uglify-js": "^3.3.12",
 		"vrsource-tslint-rules": "^5.8.1"
 	}
