--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"test:ci:normal": "npm run build:tests && intern config=@ci",
 		"build:tests": "tsc -p tests && shx cp tests/index.html build/tests/index.html",
 		"lint": "tslint -p . kendo-multi-calendar.ts && tslint -p tests/tsconfig.json tests/**/{*.ts,*.d.ts}",
-		"coverage": "remap-istanbul -i coverage/coverage-final.json -t text-lcov | coveralls",
+		"coverage": "codecov -f coverage/*.json",
 		"break-cache": "break-cache -i README.md -m \"\\.svg\" -o README.md",
 		"break-cache-commit": "npm run break-cache && git commit -am \"[skip ci] readme cache break\""
 	},
@@ -44,7 +44,7 @@
 		"@types/jquery": "^1.10.34",
 		"@types/kendo-ui": "^2018.1.1",
 		"break-cache": "^1.0.3",
-		"coveralls": "^3.0.0",
+		"codecov": "^3.0.0",
 		"intern": "^4.1.5",
 		"remap-istanbul": "^0.10.1",
 		"shx": "^0.2.2",
